# AdaptiveRobot

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  tunables.json
5113-Perry/: LICENSE.txt
5113-Perry/src/: physics.py  robot.py
5113-Perry/src/utils/: fsm.py  (+1 more)
adaptive_robot/: __init__.py  adaptive_component.py  adaptive_robot.py  axis_request.py  fault_manager.py  requests.py  telemetry.py
adaptive_robot/adaptive_component/: adaptive_component.py  component_scheduler.py
adaptive_robot/autonomous/: action_scheduler.py  async_actions.py  instructions.py
adaptive_robot/faults/: fault_scheduler.py  faults.py
adaptive_robot/hardware/: adaptive_dc_encoder.py
adaptive_robot/interfaces/: faultable.py  shared_interface_state.py  subscheduler.py
adaptive_robot/profiling/: profile_method.py  profiling_logger.py  profiling_models.py  profiling_subscheduler.py
adaptive_robot/sysid/: sysidroutine.py  sysidtest.py
adaptive_robot/telemetry/: struct_telemetry.py  telemetry.py
adaptive_robot/tests/: conftest.py
adaptive_robot/tunable/: tunable_pid_controller.py  tunable_value.py
adaptive_robot/utils/: auto_chooser.py  json_io.py  math_utils.py  talon_faults.py
docs/: FUTURE.md  MOTIVATION.md  OVERVIEW.md  quickstart.md
docs/features/: ACTIONS_GUIDE.md  ACTION_CHOOSER_GUIDE.md  COMPONENTS_GUIDE.md  FAULTS_GUIDE.md  INTERFACE_GUIDE.md  PROFILING_GUIDE.md  REQUESTS_GUIDE.md  ROBOT_GUIDE.md  SYSID_GUIDE.md  UTILS_GUIDE.md
example-robot/src/: robot.py
examples/arm_robot/: README.md  arm.py  arm_constants.py  arm_controller.py  robot.py
(+137 files in other folders)
